--- a/site/package.json
+++ b/site/package.json
@@ -15,7 +15,6 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
@@ -30,7 +29,7 @@
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
 		"vitest": "^0.25.3",
-		"@sveltejs/adapter-vercel": "next"
+		"@sveltejs/adapter-vercel": "^1.0.0"
 	},
 	"type": "module"
 }
